--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,49 @@
 body {
-    font-family: 'Montserrat';
-}
-
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
-
-.container-fluid {
-  padding: 3% 15% 7%;
-}
-
-h1 {
   font-family: 'Montserrat';
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 1.5;
+  text-align: center;
 }
 
-h2 {
+h1, h2, h3, h4 {
   font-family: 'Montserrat';
-  font-weight: bold;
-  font-size: 3rem;
-  line-height: 1.5;
 }
 
 h3 {
   font-weight: bold;
-  font-size: 1.5rem;
 }
 
 p {
   color: #8f8f8f;
 }
 
-/* Title Image */
+/* Headings */
 
-.title-image-div {
-  position: relative;
+.big-heading {
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+.section-heading {
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-.title-image {
-  width: 70%;
-  transform: rotate(25deg);
-  padding-left: 50px;
-  position: absolute;
-}
+/* Containers */
 
-/* Features Section */
-
-#features {
+.container-fluid {
   padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
   background-color: #ffff;
-  position: relative;
 }
-
-.feature-box {
-  text-align: center;
-  padding: 5%;
-}
-
-.icon {
-  color: #ef8172;
-  margin-bottom: 1rem;
-}
-.icon:hover {
-  color: #ff4c68;
-}
-
 
 /* Navagation Bar */
 
@@ -86,18 +62,62 @@ p {
   font-size: 1.2rem;
 }
 
+/* Title Section */
+
+#title {
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+.title-image-div {
+  position: relative;
+}
+
+.title-image {
+  width: 70%;
+  transform: rotate(25deg);
+  padding-left: 50px;
+  position: absolute;
+}
+
 /* Download Button */
 
 .download-button {
   margin: 5% 3% 5% 0;
 }
 
+/* Features Section */
+
+#features {
+  position: relative;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+.features-text {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+.icon:hover {
+  color: #ff4c68;
+}
+
 /* Testimonial Section */
 
 #testimonials {
-  text-align: center;
   background-color: #ef8172;
-  color: #fff;
 }
 
 .testimonial-image {
@@ -106,13 +126,14 @@ p {
   margin: 20px;
 }
 
-.carousel-item {
-  padding: 7% 15%;
+.testimonial-text {
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -125,21 +146,31 @@ p {
 
 #pricing {
   padding: 100px;
-  text-align: center;
 }
 
 .pricing-column {
   padding: 3% 2%;
 }
 
+.pricing-text {
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
 @media (max-width: 1028px) {
   #title {
     text-align: center;
   }
-  
+
   .title-image {
     position: static;
     transform: rotate(0);
     padding-left: 0;
   }
+}
+
+/* Footer Section */
+
+.footer-icon {
+  margin: 20px 10px;
 }
