--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,35 @@ p {
 
 /* JavaScript animations */
 
+.animation {
+    opacity: 0;
+    transform: translateX(-300px);
+    transition: all 0.7s ease-out;
+    transition-delay: 0.4s;
+
+}
+
+.scroll-animation {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+
+
+/*
+.slide-in {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+.slide-in-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+
 .slide-in {
   opacity: 0;
   transform: translateX(-50px);
@@ -187,3 +216,4 @@ p {
   opacity: 1;
   transform: translateX(0);
 }
+*/
