js animations test 4

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,29 @@ p {
   color: #8f8f8f;
 }
 
+
+/* JavaScript animations */
+
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+@media(prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+
 /* Headings */
 
 .big-heading {
@@ -175,8 +198,13 @@ p {
   margin: 20px 10px;
 }
 
-/* JavaScript animations */
 
+
+
+
+
+
+/*
 .animation {
     opacity: 0;
     transform: translateX(-300px);
@@ -192,7 +220,7 @@ p {
 
 
 
-/*
+
 .slide-in {
   opacity: 0;
   transform: translateX(-100px);
