--- a/css/style.css
+++ b/css/style.css
@@ -15,29 +15,6 @@ p {
   color: #8f8f8f;
 }
 
-
-/* JavaScript animations */
-
-.hidden {
-  opacity: 0;
-  filter: blur(5px);
-  transform: translateX(-100%);
-  transition: all 1s;
-}
-
-@media(prefers-reduced-motion) {
-  .hidden {
-    transition: none;
-  }
-}
-
-.show {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateX(0);
-}
-
-
 /* Headings */
 
 .big-heading {
@@ -199,49 +176,49 @@ p {
 }
 
 
+/* JavaScript animations */
 
-
-
-
-
-/*
-.animation {
-    opacity: 0;
-    transform: translateX(-300px);
-    transition: all 0.7s ease-out;
-    transition-delay: 0.4s;
-
+.reveal{
+  transition: all ease;
 }
 
-.scroll-animation {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-
-
-
-.slide-in {
+.reveal.slide-1{
   opacity: 0;
   transform: translateX(-100px);
   transition: opacity 0.5s, transform 0.5s;
+  transition-delay: 0.2s;
 }
-
-.slide-in-active {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-
-
-.slide-in {
+.reveal.slide-2{
   opacity: 0;
-  transform: translateX(-50px);
-  transition: all 0.5s;
+  transform: translateX(-100px);
+  transition: opacity 0.5s, transform 0.5s;
+  transition-delay: 0.4s;
+}
+.reveal.slide-3{
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 0.5s, transform 0.5s;
+  transition-delay: 0.6s;
+}
+.reveal.slide-4{
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: opacity 0.5s, transform 0.5s;
+  transition-delay: 0.8s;
 }
 
-.slide-in.active {
-  opacity: 1;
-  transform: translateX(0);
+@keyframes reveal {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
-*/
+
+.reveal.active{
+  transform: translateY(0px);
+  opacity: 1;
+}
