--- a/css/style.css
+++ b/css/style.css
@@ -185,25 +185,25 @@ p {
 .reveal.slide-1{
   opacity: 0;
   transform: translateX(-100px);
-  transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.2s ease, transform 0.5s;
   transition-delay: 0.2s;
 }
 .reveal.slide-2{
   opacity: 0;
   transform: translateX(-100px);
-  transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.2s ease, transform 0.5s;
   transition-delay: 0.4s;
 }
 .reveal.slide-3{
   opacity: 0;
   transform: translateX(-100px);
-  transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.2s ease, transform 0.5s;
   transition-delay: 0.6s;
 }
 .reveal.slide-4{
   opacity: 0;
   transform: translateX(-100px);
-  transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.2s ease, transform 0.5s;
   transition-delay: 0.8s;
 }
 
